--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
 
             <div class="weather-status">
                 <div class="temp" id="temp"></div>
-                <div class="min-max" id="min-max"></div>
+                <div class="humidity" id="humidity"></div>
                 <div class="weather" id="weather"></div>
             </div>
         </div>
+
+        <div class="form-end"></div>
     </div>
 
     <script src="app.js"></script>
