--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
             <div class="weather-status">
                 <div class="temp" id="temp"></div>
+                <div class="feels-like" id="feels-like"></div>
                 <div class="humidity" id="humidity"></div>
                 <div class="weather" id="weather"></div>
             </div>
