--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
         <div class="form-end"></div>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+    <script>
+        $(document).ready( function () {
+            $("input").keyup(function(event) {
+                if (event.keyCode === 13) {
+                    $("input").blur();
+                }
+            });
+        });
+    </script>
+
     <script src="app.js"></script>
 </body>
 </html>
